--- a/index.html
+++ b/index.html
@@ -494,7 +494,112 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-p">Subscribe</p>
+          <form class="form-all">
+            <label class="label-email" for="email">
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                id="email"
+              />
+            </label>
+            <button type="button" class="footer-button">
+              Subscribe
+              <svg class="footersvg-send-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg class="svg-close-btn" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-p">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="modal-form-field">
+            <label class="label-modal" for="user-name">Name</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="input-modal"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="svg-modal" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="label-modal" for="user-phone">Phone</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="input-modal"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+              />
+              <svg class="svg-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="label-modal" for="user-email">Email</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="input-modal"
+                type="email"
+                id="user-email"
+                name="user-email"
+              />
+              <svg class="svg-modal" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="label-modal" for="comment">Comment</label>
+            <div class="modal-form-wrapper">
+              <textarea
+                class="form-input"
+                name="comment"
+                rows="6"
+                placeholder="Text input"
+                id="comment"
+              ></textarea>
+            </div>
+          </div>
+          <div class="checkbox">
+            <input
+              class="checkbox-input visually-hidden"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+              id="user-privacy"
+            />
+            <label class="checkbox-label" for="user-privacy">
+              <span class="checkbox-span">
+                <svg class="galochka" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="checkbox-link" href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
