--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         </div>
         <div class="subscribe">
           <p class="subscribe-p">Subscribe</p>
-          <form class="form-all">
+          <form class="form-footer">
             <label class="label-email" for="email">
               <input
                 class="footer-input"
