--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                 id="email"
               />
             </label>
-            <button type="button" class="footer-button">
+            <button type="button" type="submit" class="footer-button">
               Subscribe
               <svg class="footersvg-send-icon" width="24" height="20">
                 <use href="./images/icons.svg#icon-send"></use>
