--- a/index.html
+++ b/index.html
@@ -568,14 +568,14 @@
             </div>
           </div>
           <div class="modal-form-field">
-            <label class="label-modal" for="comment">Comment</label>
+            <label class="label-modal" for="user-comment">Comment</label>
             <div class="modal-form-wrapper">
               <textarea
                 class="form-input"
-                name="comment"
+                name="user-comment"
                 rows="6"
                 placeholder="Text input"
-                id="comment"
+                id="user-comment"
               ></textarea>
             </div>
           </div>
